src/style.scss
body > div > div > div > div.login-form {
  height: 100%;
}
body > div > div > div {
  height: 100%;
}
body > div > div {
  height: 100%;
}
body > div {
  height: 100%;
}

#login__header {
  color:White;
  opacity: 0.85;

}
#login__button {
  background-color:#303E4D;
  color:white;
}
#chat__button {
  background-color:#303E4D;
  color:white;
}

#chat__chatroom {
  display:flex;
  flex-direction: column;
  width: 80%;
  margin: auto;
  padding-top: 2%;
  overflow: hidden;
  margin-top: 20px;
}

#chat__chatbox {
  overflow-y: scroll;
  height: 70%;
}

#comment__comment:hover #message__delete{
  color: #4183C4;
}

#message__delete {
  color:white;
}

body {
  background-image: url(https://images.unsplash.com/photo-1431629452562-165c8f49fc97?ixlib=rb-0.3.5&s=995930e5e5a391860e70cd6bd781546c&auto=format&fit=crop&w=1350&q=80);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #3E363F;
  height: 100vh;
  overflow: hidden;
}
#chat__chatbox {
  background: white;
  border-radius: 5px;
  padding: 20px;
  opacity: 0.95;
}


#chat__form {
  padding-top: 10px;
}

